# flecsph

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  load_darwin.sh  main.cpp  readme.md  scalingTest.h  test
IOTests/: CMakeLists.txt  hdf5ParticleIO.h  hdf5SimIO.h  main.cpp  octree.h  readme.txt  simIO.h  zorderOctree.h
IOTests/hdf5_sample/: sample2.cpp
IOTests/tests/: simData.h
app/: .mpi_partition.cc.swp  .physics.cc.swp  .tree_driver.cc.swp  CMakeLists.txt  fmm.cc  io.cc  main.cc  main_driver.cc  mpi_partition.cc  physics.cc  sodtube.cc  tree.cc  tree_driver.cc
app/bns/: CMakeLists.txt  main_driver.cc  physics.cc
app/bns/include/: body.h  physics.h  user.h
app/bns_2D/: CMakeLists.txt  main.cc  main_driver.cc
app/bns_2D/include/: user.h
app/bns_3D/: CMakeLists.txt  main_driver.cc
app/bns_3D/include/: user.h
app/bwd/: CMakeLists.txt  main.cc  main_driver.cc
app/bwd/generator/: main.cc
app/bwd/include/: user.h
app/conv_mom/: CMakeLists.txt  main_driver.cc
app/conv_mom/generator/: main.cc
app/conv_mom/include/: user.h
app/drivers/: CMakeLists.txt
app/drivers/hydro/: main.cc  main_driver.cc
app/drivers/include/: user.h
app/drivers/newtonian/: main.cc  main_driver.cc
app/drivers/newtonian/collapse/: main_driver.cc
app/drivers/newtonian_collapse/: main.cc  main_driver.cc  main_driver_old.cc
app/drivers/test/: KH.cc  RT.cc  collapse.cc  implosion.cc  mesa.cc  noh.cc  sedov.cc  sodtube.cc  wvt.cc
app/drivers/tree/: main.cc  main_driver.cc
app/drivers/wvt/: main.cc  main_driver.cc
app/flecsi_legion/: CMakeLists.txt  main_driver.cc
app/flecsi_legion/generator/: main.cc
app/flecsi_legion/include/: user.h
app/fluid/: CMakeLists.txt  main.cc  main_driver.cc
app/fluid/generator/: main.cc
app/fluid/include/: user.h
app/fluid_2D/: CMakeLists.txt  main.cc  main_driver.cc
app/fluid_2D/generator/: main.cc
app/fluid_2D/include/: user.h
app/fluid_3D/: CMakeLists.txt  main.cc  main_driver.cc
app/fluid_3D/generator/: main.cc
app/fluid_3D/include/: user.h
app/id_generators/: CMakeLists.txt
app/id_generators/KH/: README.md  main.cc
app/id_generators/RT/: main.cc
app/id_generators/airfoil/: README.md  main.cc  setup.gnu
app/id_generators/collapse/: main.cc
app/id_generators/fluid/: main.cc
app/id_generators/fluid_2d/: main.cc
app/id_generators/fluid_3d/: main.cc
app/id_generators/implosion/: main.cc
app/id_generators/include/: collapse.h  fluid.h  implosion.h  noh.h  random.h  sedov.h  sodtube.h  user.h
app/id_generators/noh/: main.cc
app/id_generators/random/: main.cc
app/id_generators/sedov/: main.cc
app/id_generators/sodtube/: main.cc
app/id_generators/wtunnel/: README.md  main.cc
app/implosion/: CMakeLists.txt  main.cc  main_driver.cc
app/implosion/generator/: main.cc
app/miscell/binary/: binary.py  tov_pp_10000_particles.h5  tov_pp_50000_particles.h5part
app/miscell/conv_momen/: gen_test_star.py  test_star_1.0_v_50000_particles.h5part
app/miscell/converter/: converter.py
app/miscell/tov/: tov_pp_50000_particles.h5part  tov_solver.py  tov_solver_h5part.py
app/noh/: CMakeLists.txt  main.cc  main_driver.cc
app/noh/generator/: main.cc
app/noh/include/: user.h
app/noh/test/: CMakeLists.txt  noh_sqn100.par
app/sedov/: .CMakeLists.txt.swp  CMakeLists.txt  main.cc  main_driver.cc
app/sedov/generator/: main.cc
app/sedov/test/: CMakeLists.txt  sedov.cc  sedov_sqn100.par
app/sodtube/: .sodtube.cc.swp  CMakeLists.txt  README.md  main.cc  main_driver.cc  sodtube.cc
app/sodtube/generator/: main.cc
app/sodtube/include/: body.h  sodtube.h  user.h
app/sodtube/test/: ._CMakeLists.txt  ._sodtube.cc  CMakeLists.txt  sodtube.cc  sodtube_t1_n100.par
app/test_fluid_2D/: CMakeLists.txt  main_driver.cc
app/test_fluid_2D/generator/: main.cc
app/test_io/: CMakeLists.txt  main_driver.cc
cmake/: FindFleCSI.cmake  FindHDF5.cmake  ProcessOptions.cmake  SetupDeps.cmake  SetupFlags.cmake  SetupTesting.cmake
config/: packages.cmake  project.cmake
data/: KH_2d.par  KH_3d.par  RT_2d.par  RT_3d.par  collapse_nx10.par  collapse_nx100.par  data_binary_16288.txt  data_binary_8338.txt  data_binary_rdy_16288.txt  data_bns_14147.txt  data_bns_15408.txt  data_bns_4169.txt  data_test_10.txt  data_test_100.txt  data_test_40.txt  data_two_2.txt  hdf5_sedov.h5part  hdf5_sodtube.h5part  implosion_nx20.par  implosion_sqn100.par  kh_n100.par  mesa_nx20.par  noh_nx20.par  noh_sqn100.h5part  noh_sqn100.par  ns.par  sedov_nx20.par  sedov_sqn100.h5part  sedov_sqn100.par  sodtube_evol_2d.par  sodtube_evol_3d.par  sodtube_init_2d.par  sodtube_init_3d.par  sodtube_t1_n100.par  wind_tunnel_airfoil.par  wvt_nx20.par
doc/: DEVELOPMENT.md  H5_STRUCTURE.md  RUN_TEST.md  SODTUBE.md  development.md  doxygen.conf.in  notes.tex
docker/: Dockerfile  Dockerfile_dev
include/: .tree.h.swo  CMakeLists.txt  body.h  diagnosis.h  diagnostic.h  io.h  kernel.h  lattice.h  log.h  logger.h  mpi_partition.h  params.h  physics.h  sodtube.h  space_vector.h  tensor.h  tree.h  tree_topology.h  user.h
input/: input.json
mpisph/: .CMakeLists.txt.swp  CMakeLists.txt  bodies_system.h  io.h  mpi_partition.cc  psort.h  tree_colorer.h  tree_fmm.h  tree_gravitation.h  utils.h
mpisph/test/: bs.cc  gravitation.cc  io.cc  io_test.h5part  mpi_qsort.cc  tree3d.cc  tree_distributed.cc  tree_distributed_data.h5part  user.h
python/: driver.py  hdf5ParticleIO.py  test.h5part
spack-repo/: repo.yaml
testOutput/: test8000.h5part
third-party-libraries/: .gitignore  install_h5hut.sh  install_hdf5_parallel.sh
tools/: .gitignore  1D_reduction.py  README.md  bench_strong_scaling.sh  bench_weak_scaling.sh  combine_H5part_iterations.py  conv_1d.py  conv_ascii2H5part.py  extract_h5part_iteration.py  extract_particle.py  format.sh  gen_uniform_sphere.py  h5part_ascii_slicer.py  iterations_merger.py  job.sh  job_romeo.sh  launch_strong.sh  launch_strong_openMP.sh  launch_weak.sh  launch_weak_openMP.sh  main_change_velocity.cc  make_binary_system.py  plot_BNS.py  plotvar.sh  (+6 more)
(+200 files in other folders)
